# edsl.gen

./: CMakeLists.txt
example/: complex.cpp
include/edsl/: gen.hpp
include/meta/: arguments.hpp  result.hpp  type_traits.hpp
test/: CMakeLists.txt  alternative.cpp  kleene.cpp  optional.cpp  plus.cpp  sequence.cpp  unary_plus.cpp
